Fix input button misalignment

--- a/src/common/components/search-box/_index.scss
+++ b/src/common/components/search-box/_index.scss
@@ -1,6 +1,14 @@
 .search-box {
   position: relative;
 
+  @media (min-width: $md-break) {
+    .input-with-copy {
+      &:focus {
+            width: 90% !important;
+      }
+    }
+  }
+
   .prepend {
     position: absolute;
     left: 0;
